syntax = "proto3";

package protoMessages;

message Registry {
    string walletAddr = 1;
    string hostPort = 2;
}


