syntax = "proto3";

package protoMessages;

message UnRegistry {
    string walletAddr = 1;
}


