syntax = "proto3";

package messages;
import "github.com/ontio/ontology-eventbus/actor/protos.proto";

message Start {}
message StartRemote {
    actor.PID Sender = 1;
}
message Ping {
    bytes Data = 1;
}
message Pong {}

message Torrent {
    bytes infoHash = 1;
    uint64 left = 2;
    bytes peerinfo = 3;
    int32 type = 4; // 0 default; 1 broadcast; 2 rebroadcast;
}

message Endpoint {
    string walletAddr = 1;
    string hostPort = 2;
    int32 type = 3; // 0 default; 1 broadcast; 2 rebroadcast;
}

message Bytes {
    bytes data = 1;
}

message Keepalive {
}

message KeepaliveResponse {
}

message Disconnect{
}